Complément dans la documentation

--- a/README
+++ b/README
@@ -1,4 +1,4 @@
 Depot pour nos manifestes puppet
 Formation Dawan 27/02/2017
 
-On a appris à utiliser git
+On a appris à utiliser git, et aussi tig
